fixed progress bar but not aligned properly

--- a/static/main.css
+++ b/static/main.css
@@ -63,3 +63,14 @@ p {
     color: #121212;
 }
 
+.progress {
+    height: 10px;
+    width: 80px;
+
+}
+
+.progress-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
